Implement Client Token Provider

--- a/plugin.xml
+++ b/plugin.xml
@@ -19,6 +19,9 @@
 
     <!-- Android Configuration -->
     <platform name="android">
+
+        <preference name="ANDROID_BRAINTREE_VERSION" default="4.15.0" />
+
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="BraintreePlugin">
                 <param name="android-package" value="org.apache.cordova.braintree.BraintreePlugin" />
@@ -28,8 +31,8 @@
 
         <source-file src="src/android/BraintreePlugin.java" target-dir="src/org/apache/cordova/braintree" />
 
-        <framework src="com.braintreepayments.api:google-pay:4.15.0" />
-        <framework src="com.braintreepayments.api:data-collector:4.15.0" />
+        <framework src="com.braintreepayments.api:google-pay:$ANDROID_BRAINTREE_VERSION" />
+        <framework src="com.braintreepayments.api:data-collector:$ANDROID_BRAINTREE_VERSION" />
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application/activity">
             <intent-filter>
